--- a/dbms/mysite/myapp/templates/myapp/eventScreen.html
+++ b/dbms/mysite/myapp/templates/myapp/eventScreen.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Events</title>
+    <title>CREATE ACCOUNT</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
@@ -42,7 +42,7 @@
           <div class="navbar-header">
               <!-- Logo -->
               <div class="navbar-brand">
-                  <a class="logo" href="index.html">
+                  <a class="logo" href="/">
                       <img class="logo-img" src="{% static 'myapp/img/logo.png'%}" alt="logo">
                       <img class="logo-alt-img" src="{% static 'myapp/img/logo-alt.png'%}" alt="logo">
                   </a>
