--- a/dbms/mysite/myapp/static/myapp/css/style.css
+++ b/dbms/mysite/myapp/static/myapp/css/style.css
@@ -126,6 +126,7 @@ body {
   left: 50%;
   position: absolute;
   transform: translate(-50%,-50%);
+  overflow: auto;
   box-sizing: border-box;
   padding: 300px 35px;
 }
