--- a/dbms/mysite/myapp/templates/myapp/managerRegister.html
+++ b/dbms/mysite/myapp/templates/myapp/managerRegister.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Signup</title>
+    <title>Title goes here</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
@@ -35,46 +35,47 @@
 
 <body>
 
-    <!-- Header -->
-    <header id="header">
-        <!-- container -->
-        <div class="container">
-            <!-- navbar header -->
-            <div class="navbar-header">
-                <!-- Logo -->
-                <div class="navbar-brand">
-                    <a class="logo" href="index.html">
-                        <img class="logo-img" src="./img/logo.png" alt="logo">
-                        <img class="logo-alt-img" src="./img/logo-alt.png" alt="logo">
-                    </a>
-                </div>
-                <!-- /Logo -->
+  <!-- Header -->
+  <header id="header">
+      <!-- container -->
+      <div class="container">
+          <!-- navbar header -->
+          <div class="navbar-header">
+              <!-- Logo -->
+              <div class="navbar-brand">
+                  <a class="logo" href="/">
+                      <img class="logo-img" src="{% static 'myapp/img/logo.png'%}" alt="logo">
+                      <img class="logo-alt-img" src="{% static 'myapp/img/logo-alt.png'%}" alt="logo">
+                  </a>
+              </div>
+              <!-- /Logo -->
 
-                <!-- Mobile toggle -->
-                <button class="navbar-toggle">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                <!-- /Mobile toggle -->
-            </div>
-            <!-- /navbar header -->
+              <!-- Mobile toggle -->
+              <button class="navbar-toggle">
+                      <i class="fa fa-bars"></i>
+                  </button>
+              <!-- /Mobile toggle -->
+          </div>
+          <!-- /navbar header -->
 
-            <!-- Navigation -->
-            <nav id="nav">
-                <ul class="main-nav nav navbar-nav navbar-right">
-                    <li><a href="/">Home</a></li>
-                </ul>
-            </nav>
-            <!-- /Navigation -->
+          <!-- Navigation -->
+          <nav id="nav">
+              <ul class="main-nav nav navbar-nav navbar-right">
+                  <li><a href="/">HOME</a></li>
+              </ul>
+          </nav>
+          <!-- /Navigation -->
 
-        </div>
-        <!-- /container -->
-    </header>
-    <!-- /Header -->
+      </div>
+      <!-- /container -->
+  </header>
+  <!-- /Header -->
+
 
     <!-- /LOGIN -->
     <div class="createaccount">
         <img src="avatar.png" class="avatar">
-        <h2 style="color:#dd0a37">MANAGER SIGNUP</h2>
+        <h2 style="color:#dd0a37">CREATE MANAGER</h2>
       <form  method="post">
           <!-- eventScreen.html      -->
               {% csrf_token %}
@@ -83,7 +84,7 @@
             <input type="text" name="" placeholder="Username" required>
             <p>PASSWORD</p>
             <input type="password" name="" placeholder="password"> -->
-            <input type="submit" name="" value="SIGNUP" class="button">
+            <input type="submit" name="" value="Login" class="button">
 
             <!-- <a href=sample>createaccount</a><br> -->
 
